[gd_scene load_steps=20 format=2]

[ext_resource path="res://images/Golden Spearman.png" type="Texture" id=1]
[ext_resource path="res://Golden Warrior.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 198, 198 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 198, 0, 198, 198 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 396, 0, 198, 198 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 198, 198, 198 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 198, 198 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 198, 198, 198, 198 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 396, 198, 198, 198 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 396, 198, 198 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 198, 396, 198, 198 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 396, 396, 198, 198 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 594, 198, 198 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 198, 594, 198, 198 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 396, 594, 198, 198 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=15]
radius = 31.5503
height = 93.4897

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 63.4255, 10 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 66.3985, 10 )

[node name="Golden Warrior" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 2 )
SPEED = 100

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 14 )
animation = "idle"

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -4.00903, 21.3816 )
shape = SubResource( 15 )

[node name="AttackCollision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="end" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( -31.924, 34.4307 )
shape = SubResource( 16 )
disabled = true

[node name="start" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( 18.77, 34.4307 )
shape = SubResource( 17 )
disabled = true

[node name="SwingTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="SwingTimer2" type="Timer" parent="."]
wait_time = 0.2

[node name="SwingTimer3" type="Timer" parent="."]
wait_time = 0.2

[node name="RayWall" type="RayCast2D" parent="."]
position = Vector2( 0, 25 )
enabled = true
cast_to = Vector2( -150, 0 )

[node name="RayChar" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -150, 0 )
collision_mask = 2

[connection signal="timeout" from="SwingTimer" to="." method="_on_SwingTimer_timeout"]
[connection signal="timeout" from="SwingTimer2" to="." method="_on_SwingTimer2_timeout"]
[connection signal="timeout" from="SwingTimer3" to="." method="_on_SwingTimer3_timeout"]
